--- a/index.html
+++ b/index.html
@@ -698,18 +698,26 @@ description: meta.description
         <div class="inner columns aligned" id="partner-structure">
           <div class="partner_column">
             <h3>{% t partners_integration_title %}</h3>
-            <a href="https://chain.link/" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/partners/chainlink.png" /></a>
-            <a href="https://sparkpoint.io/" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/partners/sparkpoint.png" /></a>
-            <a href="https://www.axpire.com/consumer/" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/partners/axpire.png" /></a>
-            <a href="https://splinterlands.com?ref=projecthydro" target="_blank"><img class="exchange-pic" src="assets/images/partners/splinterland.png" /></a>
+            <a href="https://chain.link/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/chainlink.png" /></a>
+            <a href="https://sparkpoint.io/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/sparkpoint.png" /></a>
+            <a href="https://www.axpire.com/consumer/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/axpire.png" /></a>
+            <a href="https://splinterlands.com?ref=projecthydro" target="_blank"><img class="partner-pic" src="assets/images/partners/splinterland.png" /></a>
+            <a href="https://tusc.network/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/tusc.png" /></a>
           </div>
           <div class="inner columns aligned" id="partner-structure">
             <div class="partner_column">
               <h3>{% t partners_media_title %}</h3>
-              <a href="https://coinnewsextra.com/" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/partners/coinnewsextra.png" /></a>
-              <a href="" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/partners/coinnewsnet.png" /></a>
+              <a href="https://coinnewsextra.com/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/coinnewsextra.png" /></a>
+              <a href="" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/coinnewsnet.png" /></a>
             </div>
           </div>
+          <!-- legal section -->
+          <!-- <div class="inner columns aligned" id="partner-structure">
+            <div class="partner_column">
+              <h3>Legal Partner</h3>
+              <a href="" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/coinnewsnet.png" /></a>
+            </div>
+          </div> -->
 
         <!-- Documentation overlay -->
 
