--- a/index.html
+++ b/index.html
@@ -561,8 +561,9 @@ description: meta.description
       <!-- Discover roadmap panel -->
 
       <section class="panel">
-        <div class="intro">
-          <h2><a href="https://projecthydro.org/blog" target="_blank" rel="noreferrer">{% t blog_title %}</a></h2>
+        <div class="intro" id="blog-structure" style="margin-top:-2rem; ">
+          <h3><a href="https://projecthydro.org/blog" target="_blank" rel="noreferrer" style="padding-left:1rem;">{% t blog_title %}</a></h3>
+          <br>
           <span id="blog-feed">{% t loading %}</span> <br>
         </div>
 
@@ -590,7 +591,7 @@ description: meta.description
             <a href="https://chain.link/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/chainlink.png" /></a>
             <a href="https://sparkpoint.io/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/sparkpoint.png" /></a>
             <a href="https://www.axpire.com/consumer/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/axpire.png" /></a>
-            <a href="https://splinterlands.com?ref=projecthydro" target="_blank"><img class="partner-pic" src="assets/images/partners/splinterland.png" /></a>
+            <!-- <a href="https://splinterlands.com?ref=projecthydro" target="_blank"><img class="partner-pic" src="assets/images/partners/splinterland.png" /></a> -->
             <a href="https://tusc.network/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/tusc.png" /></a>
           </div>
           <div class="inner columns aligned" id="partner-structure">
