--- a/index.html
+++ b/index.html
@@ -617,8 +617,7 @@ description: meta.description
                 <a href="https://github.com/HydroBlockchain" target="_blank" rel="noreferrer">Visit Project Hydros Github</a>
                 <a href="https://github.com/HydroBlockchain/Hydro-Docs" target="_blank" rel="noreferrer">Review our Documentation</a>
                 <a href="pages/application.html" target="_blank" rel="noreferrer">Apply to the DA Team</a>
-                <a href="pages/privacy-policy.html" target="_blank" rel="noreferrer">{% t privacy_1 %}</a>
-                <a href="pages/tutorial-portal.html" target="_blank" rel="noreferrer">Tutorial Portal</a>
+                <a href="https://projecthydro.org/blog/hydrowallet-privacy-policy/" target="_blank" rel="noreferrer">{% t privacy_1 %}</a>
               </div>
             </div>
           </div>
