--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ description: meta.description
       <section class="panel banner left">
         <div class="content span-3-75" id="intro-structure">
           <div class="center-everything" id="intro-center">
-            <span><img id="hydro-logo" src="assets/images/hydro_logo.svg" alt="Hydro Logo" /></span>
+            <!-- <span><img id="hydro-logo" src="assets/images/hydro_logo.svg" alt="Hydro Logo" /></span> -->
             <h1><span>{% t hydro_title %}</span></h1>
             <p>{% t hydro_is %}</p>
           </div>
