more style updates

--- a/index.html
+++ b/index.html
@@ -326,6 +326,27 @@ description: meta.description
             </div>
           </div>
 
+          <div class="da-team-column" id="focus-team">            
+            <div class="da-member">
+              <img class="da-pic" alt="hanna" src="assets/images/da-team/hanna.png" />
+              <p class="da-name">Hanna Hermawan</p>
+              <p class="da-position">UI/UX Designe</p>
+              <div class="da-buttons">
+                <a class="button-da" target="_blank" rel="noreferrer" href="https://twitter.com/yookomoon?s=09"><i class="fab fa-twitter"></i></a>
+                <a class="button-da" target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/hanna-hermawan-0566741b9/"><i class="fab fa-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="da-member">
+              <img class="da-pic" alt="murphy" src="assets/images/da-team/murphy.png" />
+              <p class="da-name">Usifo Murphy</p>
+              <p class="da-position">Product Manager</p>
+              <div class="da-buttons">
+                <a class="button-da" target="_blank" rel="noreferrer" href="https://twitter.com/druids01"><i class="fab fa-twitter"></i></a>
+                <a class="button-da" target="_blank" rel="noreferrer" href="https://linkedin.com/in/Usifo-Murphy"><i class="fab fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
       </section>
 
       <!-- Discover roadmap panel -->
@@ -518,6 +539,7 @@ description: meta.description
             <a href="https://www.bitforex.com/en/spot/hydro_eth" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/bitforex.png" /></a>
             <a href="https://app.liquid.com/exchange/HYDROBTC" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/liquid.png" /></a>
             <a href="https://bq.net/trade/HYDRO-BTC" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/bitsdaq.png" /></a>
+            <a href="https://trade.buyucoin.com/trade/HYDRO-INR" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/buyucoin.png" /></a>
           </div>
           <div class="exchanges_column" id="exchange-column-2">
             <a href="https://mercatox.com/exchange/HYDRO/BTC" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/mercatox.png" /></a>
@@ -533,12 +555,16 @@ description: meta.description
             <a href="https://chain.link/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/chainlink.png" /></a>
             <a href="https://sparkpoint.io/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/sparkpoint.png" /></a>
             <a href="https://tusc.network/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/tusc.png" /></a>
+            <a href="https://ethernity.live/en/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/ethernity.png" /></a>
+            <a href="" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/bloceducare.png" /></a>
+            <a href="https://www.emedchain.com/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/emedchain.png" /></a>
+
           </div>
           <div class="inner columns aligned" id="partner-structure">
             <div class="partner_column">
               <h3>{% t partners_media_title %}</h3>
               <a href="https://coinnewsextra.com/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/coinnewsextra.png" /></a>
-              <a href="" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/coinnewsnet.png" /></a>
+              <a href="https://cryptonewsnet.com/" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/coinnewsnet.png" /></a>
             </div>
           </div>
           <!-- legal section -->
@@ -556,7 +582,7 @@ description: meta.description
               <div class="broaden">
                 <a href="https://github.com/HydroBlockchain" target="_blank" rel="noreferrer">Visit Project Hydros Github</a>
                 <a href="https://github.com/HydroBlockchain/Hydro-Docs" target="_blank" rel="noreferrer">Review our Documentation</a>
-                <a href="pages/application.html" target="_blank" rel="noreferrer">Apply to the DA Team</a>
+                <!-- <a href="pages/application.html" target="_blank" rel="noreferrer">Apply to the DA Team</a> -->
                 <a href="https://projecthydro.org/blog/hydrowallet-privacy-policy/" target="_blank" rel="noreferrer">{% t privacy_1 %}</a>
               </div>
             </div>
