--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ description: meta.description
             </div>
           </div>
 
-          <div class="da-team-column">
+          <div class="da-team-column" id="focus-team">
             <div class="da-member">
               <img class="da-pic" alt="marlo_villaos" src="assets/images/da-team/marlo.png" />
               <p class="da-name">Marlo Villaos</p>
@@ -338,31 +338,6 @@ description: meta.description
                     class="fab fa-twitter"></i></a>
                 <a class="button-da" target="_blank" rel="noreferrer"
                   href="https://www.linkedin.com/in/marlo-villaos-8330051b7/"><i class="fab fa-linkedin"></i></a>
-              </div>
-            </div>
-            <div class="da-member">
-              <img class="da-pic" alt="aditya" src="assets/images/da-team/aditya.png" />
-              <p class="da-name">Aditya Chebrolu</p>
-              <p class="da-position">{% t team_aditya %}</p>
-              <div class="da-buttons">
-                <a class="button-da" target="_blank" rel="noreferrer" href="https://github.com/Adityac1"><i
-                    class="fab fa-github"></i></a>
-                <a class="button-da" target="_blank" rel="noreferrer"
-                  href="https://www.linkedin.com/in/aditya-chebrolu-74abb9123"><i class="fab fa-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="da-team-column" id="focus-team">
-            <div class="da-member">
-              <img class="da-pic" alt="hanna" src="assets/images/da-team/hanna.png" />
-              <p class="da-name">Hanna Hermawan</p>
-              <p class="da-position">{% t team_hanna %}</p>
-              <div class="da-buttons">
-                <a class="button-da" target="_blank" rel="noreferrer" href="https://twitter.com/yookomoon?s=09"><i
-                    class="fab fa-twitter"></i></a>
-                <a class="button-da" target="_blank" rel="noreferrer"
-                  href="https://www.linkedin.com/in/hanna-hermawan-0566741b9/"><i class="fab fa-linkedin"></i></a>
               </div>
             </div>
             <div class="da-member">
@@ -377,7 +352,6 @@ description: meta.description
               </div>
             </div>
           </div>
-
       </section>
 
       <!-- Discover roadmap panel -->
@@ -623,7 +597,7 @@ description: meta.description
           <!-- <div class="inner columns aligned" id="partner-structure">
             <div class="partner_column">
               <h3>Legal Partner</h3>
-              <a href="" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/coinnewsnet.png" /></a>
+              <a href="" target="_blank" rel="noreferrer"><img class="partner-pic" src="assets/images/partners/" /></a>
             </div>
           </div> -->
 
@@ -636,7 +610,6 @@ description: meta.description
                   Github</a>
                 <a href="https://github.com/HydroBlockchain/Hydro-Docs" target="_blank" rel="noreferrer">Review our
                   Documentation</a>
-                <!-- <a href="pages/application.html" target="_blank" rel="noreferrer">Apply to the DA Team</a> -->
                 <a href="https://projecthydro.org/blog/hydrowallet-privacy-policy/" target="_blank"
                   rel="noreferrer">{% t privacy_1 %}</a>
               </div>
