optimize SEO and Accessibility

--- a/index.html
+++ b/index.html
@@ -415,15 +415,12 @@ description: meta.description
                 <div id="overlayMist" onclick="offMist()">
                   <div id="text-mist">{% t text_mist_overlay %}</div>
                 </div>
-                <a onclick="onMist()" id="overlay-mist">
-                  <li>{% t protocol_roadmap_mist_wp %}</li>
-                </a>
+                  <li onclick="onMist()" id="overlay-mist">{% t protocol_roadmap_mist_wp %}</li>
+                
                 <div id="overlayRaindrop" onclick="offRaindrop()">
                   <div id="text-raindrop">{% t text_solidity_update %}</div>
                 </div>
-                <a onclick="onRaindrop()" id="overlay-raindrop">
-                  <li>{% t protocol_roadmap_raindrop_update %}</li>
-                </a>
+                  <li onclick="onRaindrop()" id="overlay-raindrop">{% t protocol_roadmap_raindrop_update %}</li>
                 <li>{% t protocol_roadmap_token_burn %}</li>
               </ul>
               <label>{% t q1_2021 %}</label>
@@ -577,7 +574,7 @@ description: meta.description
               <img class="partner-pic" src="assets/images/partners/tusc.png" alt="tusc" /></a>
             <a href="https://ethernity.live/en/" target="_blank" rel="noreferrer">
               <img class="partner-pic" src="assets/images/partners/ethernity.png" alt="ethernity" /></a>
-            <a href="" target="_blank" rel="noreferrer">
+            <a href="https://twitter.com/bloceducare" target="_blank" rel="noreferrer">
               <img class="partner-pic" src="assets/images/partners/bloceducare.png" alt="bloceducare" /></a>
             <a href="https://www.emedchain.com/" target="_blank" rel="noreferrer">
               <img class="partner-pic" src="assets/images/partners/emedchain.png" alt="emedchain" /></a>
