--- a/index.html
+++ b/index.html
@@ -50,6 +50,38 @@ description: meta.description
         </div>
       </section>
 
+      <!--- Multichains section-->
+
+      <section class="panel">
+        <div class="intro joined">
+          <h2>MultiChains</h2>
+          <p>The Hydro protocols runs on top of multiple blockchains</p>
+        </div>
+        <div class="inner" id="blockchain-specs">
+          <div class="blockchains">
+
+          <div class="eth-specs">
+            <a href="https://ethereum.org/en/" target="_blank" rel="noreferrer"><img id="eth-logo" src="assets/images/eth.png" alt="eth-logo" /></a>
+            <div class="spec-sheet">
+            <label>Contract Address:</label> <a target="_blank" rel="noreferrer" href="https://etherscan.io/address/0xebbdf302c940c6bfd49c6b165f457fdb324649bc">0xebbdf302c940c6bfd49c6b165f457fdb324649bc</a>
+            <label>Symbol:</label> Hydro 
+            <label>Decimals:</label> 18
+            </div>
+          </div>
+
+          <div class="bsc-specs">
+            <a href="https://www.binance.org/en/smartChain" target="_blank" rel="noreferrer"><img id="bsc-logo" src="assets/images/bsc.png" alt="bsc-logo" /></a>
+            <div class="spec-sheet">
+            <label>Contract Address:</label> <a target="_blank" rel="noreferrer" href="https://etherscan.io/address/0xebbdf302c940c6bfd49c6b165f457fdb324649bc">0xebbdf302c940c6bfd49c6b165f457fdb324649bc</a>
+            <label>Symbol:</label> Hydro 
+            <label>Decimals:</label> 18
+            </div>
+          </div>
+
+        </div>
+        </div>    
+      </section>
+
       <!-- Protocol section -->
 
       <section class="panel" id="protocol-focus">
