--- a/index.html
+++ b/index.html
@@ -53,17 +53,26 @@ description: meta.description
       <!--- Multichains section-->
 
       <section class="panel">
+        <div class="intro joined">
+          <h2>Multichained Protocols</h2>
+          <p>Leverage the full power of multiple chains using the Hydro protocols.</p>
+        </div>
+
+        <div class="multichains" >
+          <img id="multichain-pic" src="assets/images/multichain.png" alt="multichain" />
+        </div>
+        
         <div class="intro joined" id="tokenomics-section">
           <div class="tokenomics">
             <div class="blockchains-section">
-            <h3>Blockchains</h3>
+            <h3>Chains</h3>
             The Hydro protocols are available to use on multiple networks. 
             All of our protocols and dApps are powered by Hydro tokens.
           </div>
           <div class="escrow-section">
-            <h3>Escrow</h3>
+            <h3>Bridge</h3>
             Hydro has a total supply of 111,111,111 million which was elected by its community. 
-            The distribution between chains is handled by our escrow that swaps your tokens between chains. 
+            The distribution between chains is handled by our bridge that swaps your tokens between chains. 
             Once the swap from one chain to another is complete you are free to enjoy the benefits of your chosen network.
           </div>
           <div class="evaporation-section">
@@ -73,11 +82,15 @@ description: meta.description
           </div>
           </div>
         </div>
-        <div class="inner" id="blockchain-specs">
+        
+        <div id="blockchain-specs">
           <div class="blockchains">
 
           <div class="eth-specs">
+            <div class="center-pics">
             <a href="https://ethereum.org/en/" target="_blank" rel="noreferrer"><img id="eth-logo" src="assets/images/eth.png" alt="eth-logo" /></a>
+            <h5>Ethereum</h5>
+          </div>
             <div class="spec-sheet">
             <label>Contract Address:</label> <a target="_blank" rel="noreferrer" href="https://etherscan.io/address/0xebbdf302c940c6bfd49c6b165f457fdb324649bc">0xebbdf302c940c6bfd49c6b165f457fdb324649bc</a>
             <label>Symbol:</label> Hydro 
@@ -86,13 +99,52 @@ description: meta.description
           </div>
 
           <div class="bsc-specs">
+            <div class="center-pics">
             <a href="https://www.binance.org/en/smartChain" target="_blank" rel="noreferrer"><img id="bsc-logo" src="assets/images/bsc.png" alt="bsc-logo" /></a>
+            <h5>Binance Smart Chain</h5>
+          </div>
             <div class="spec-sheet">
             <label>Contract Address:</label> <a target="_blank" rel="noreferrer" href="https://etherscan.io/address/0xebbdf302c940c6bfd49c6b165f457fdb324649bc">0xebbdf302c940c6bfd49c6b165f457fdb324649bc</a>
             <label>Symbol:</label> Hydro 
             <label>Decimals:</label> 18
             </div>
           </div>
+
+          <div class="dot-specs">
+            <div class="center-pics">
+            <a href="https://polkadot.network/" target="_blank" rel="noreferrer"><img id="dot-logo" src="assets/images/dot.png" alt="dot-logo" /></a>
+            <h5>Polkadot</h5>  
+          </div>
+            <div class="spec-sheet">
+            <label>Contract Address:</label> <a target="_blank" rel="noreferrer" href="https://etherscan.io/address/0xebbdf302c940c6bfd49c6b165f457fdb324649bc">0xebbdf302c940c6bfd49c6b165f457fdb324649bc</a>
+            <label>Symbol:</label> Hydro 
+            <label>Decimals:</label> 18
+            </div>
+          </div>
+
+          <div class="algo-specs">
+            <div class="center-pics">
+            <a href="https://www.algorand.com/" target="_blank" rel="noreferrer"><img id="algo-logo" src="assets/images/algo.png" alt="algo-logo" /></a>
+            <h5>Algorand</h5>  
+          </div>
+            <div class="spec-sheet">
+            <label>Contract Address:</label> <a target="_blank" rel="noreferrer" href="https://etherscan.io/address/0xebbdf302c940c6bfd49c6b165f457fdb324649bc">0xebbdf302c940c6bfd49c6b165f457fdb324649bc</a>
+            <label>Symbol:</label> Hydro 
+            <label>Decimals:</label> 18
+            </div>
+          </div>
+
+          <div class="ada-specs">
+            <div class="center-pics">
+            <a href="https://cardano.org/" target="_blank" rel="noreferrer"><img id="ada-logo" src="assets/images/ada.png" alt="ada-logo" /></a>
+            <h5>Cardano</h5>  
+          </div>
+            <div class="spec-sheet">
+            <label>Contract Address:</label> <a target="_blank" rel="noreferrer" href="https://etherscan.io/address/0xebbdf302c940c6bfd49c6b165f457fdb324649bc">0xebbdf302c940c6bfd49c6b165f457fdb324649bc</a>
+            <label>Symbol:</label> Hydro 
+            <label>Decimals:</label> 18
+            </div>
+          </div>          
 
         </div>
         </div>    
