--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@ description: meta.description
   {% include stylesheets.html %}
 </head>
 
-<!-- Initial panel -->
-
 <body class="is-preload">
   <div id="page-wrapper">
     <div class="hideDesktop">
       {% include language_selector_navbar_item.html %}
     </div>
     <div id="wrapper">
+
+      <!-- Initial panel -->
+
       <section class="panel banner left">
         <div class="content span-3-75" id="intro-structure">
           <nav class="menu">
@@ -74,8 +75,10 @@ description: meta.description
           </div>
           </div>
         </div>
+
         
-        <div id="blockchain-specs">
+        <div id="particles-js">
+        <div class="blockchain-specs">
           <div class="blockchains">
 
           <div class="eth-specs">
@@ -152,6 +155,7 @@ description: meta.description
              18
             </div>
           </div>          
+        </div>
 
         </div>
         </div>    
